--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -10,13 +10,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/",
-        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Origin": "https://mind-maple-steel.vercel.app",
-          "Access-Control-Allow-Methods": "GET, POST, PUT, PATCH, DELETE, OPTIONS",
-          "Access-Control-Allow-Headers": "Content-Type, Authorization"
-        }
+        "dest": "/"
       }
     ]
   }
