--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,18 +1,21 @@
-
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
       {
-        "src": "./server.js",
-        "use": "@vercel/node"
+          "src": "./server.js",
+          "use": "@vercel/node"
       }
-    ],
-    "routes": [
+  ],
+  "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/",
-        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+          "src": "/(.*)",
+          "dest": "/",
+          "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+      },
+      {
+          "src": "/[^.]+",
+          "dest": "/",
+          "status": 200
       }
-    ]
-  }
-  
+  ]
+}
