--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,17 +1,16 @@
 {
   "version": 2,
   "builds": [
-      {
-          "src": "./server.js",
-          "use": "@vercel/node"
-      }
+    {
+      "src": "./server.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-     
-      {
-          "src": "/[^.]+",
-          "dest": "/",
-          "status": 200
-      }
+    {
+      "src": "/(.*)",
+      "dest": "/",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+    }
   ]
 }
