--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/[^.]+", 
+      "dest": "/"       
+    },
+    {
       "src": "/(.*)",
       "dest": "/",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
