--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -7,10 +7,7 @@
     }
   ],
   "routes": [
-    {
-      "src": "/[^.]+", 
-      "dest": "/"       
-    },
+    { "src": "/[^.]+", "dest": "/", "status": 200 },
     {
       "src": "/(.*)",
       "dest": "/",
