--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,17 +1,25 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "./server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    { "src": "/[^.]+", "dest": "/", "status": 200 },
-    {
-      "src": "/(.*)",
-      "dest": "/",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-    }
-  ]
-}
+
+{   "version": 2,
+    "builds": [
+      {
+        "src": "./server.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",   
+        "dest": "/server.js"
+      },
+      {
+        "src": "/[^.]+",      
+        "dest": "/"           
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
+  }
+  
+  
