--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,25 +1,23 @@
-
-{   "version": 2,
-    "builds": [
-      {
-        "src": "./server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",   
-        "dest": "/server.js"
-      },
-      {
-        "src": "/[^.]+",      
-        "dest": "/"           
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
-  }
-  
-  
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "./server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",  
+      "dest": "/server.js"
+    },
+    {
+      "src": "/[^.]+",      
+      "dest": "/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
