--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -8,16 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",  
+      "src": "/api/.*",
       "dest": "/server.js"
     },
     {
-      "src": "/[^.]+",      
-      "dest": "/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "src": "/",
+      "dest": "index.html"
     }
   ]
 }
