--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -8,12 +8,16 @@
   ],
   "routes": [
     {
-      "src": "/api/.*",
+      "src": "/api/(.*)",
       "dest": "/server.js"
     },
     {
       "src": "/",
       "dest": "index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "build/$1"
     }
   ]
 }
