--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,17 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-    }
+  "rewrites": [
+  {"source": "/(.*)", "destination": "/"}
   ]
-  
 }
